[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/buttons/buttons.png" type="Texture" id=2]
[ext_resource path="res://music/Menu_Sounds_V2_Minimalistic_UNPAUSE.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=6]
hinting = 1
font_path = "res://Fonts/FugazOne-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 86
font_data = SubResource( 6 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 56, 1, 52, 52 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 111, 1, 52, 52 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1, 1, 52, 52 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.521
anchor_top = 0.5
anchor_right = 0.521
anchor_bottom = 0.5
margin_left = -154.08
margin_top = -252.0
margin_right = 159.92
margin_bottom = -125.0
custom_fonts/font = SubResource( 7 )
text = "Start"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn2" type="TextureButton" parent="."]
anchor_left = 0.144
anchor_top = 0.134
anchor_right = 0.144
anchor_bottom = 0.134
margin_left = 159.88
margin_top = 336.52
margin_right = 211.88
margin_bottom = 388.52
texture_normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn3" type="TextureButton" parent="."]
anchor_left = 0.144
anchor_top = 0.134
anchor_right = 0.144
anchor_bottom = 0.134
margin_left = 257.88
margin_top = 335.52
margin_right = 309.88
margin_bottom = 387.52
texture_normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn1" type="TextureButton" parent="."]
anchor_left = 0.144
anchor_top = 0.134
anchor_right = 0.144
anchor_bottom = 0.134
margin_left = 57.88
margin_top = 336.52
margin_right = 107.88
margin_bottom = 387.52
texture_normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[connection signal="pressed" from="Btn2" to="." method="_on_Btn2_pressed"]
[connection signal="pressed" from="Btn3" to="." method="_on_Btn3_pressed"]
[connection signal="pressed" from="Btn1" to="." method="_on_Button_1_pressed"]
